# classic-error-handling

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
sources/classic/error_handling/: __init__.py  errors.py  handling.py  utils.py
tests/: test_errors.py  test_handling.py  test_utils.py
