[metadata]
name = classic-error-handling
version = 0.2.1
description = Provides primitives for application errors
author = Sergei Variasov
author_email = variasov@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/variasov/classic-error-handling
project_urls =
    Bug Tracker = https://github.com/variasov/classic-error-handling/issues
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find_namespace:
python_requires = >=3.10
package_dir =
    = sources


[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=7.4.4
    pytest-cov~=4.1
    twine~=4.0
    build~=1.0
